--- a/src/frontend/templates/home.html
+++ b/src/frontend/templates/home.html
@@ -25,15 +25,16 @@
 <main role="main" class="home">
   <section class="jumbotron text-center mb-0 h-jumbotron">
     <div class="container">
-      <img src="/static/icons/Hipster_HeroLogo.svg" alt="icon" class="icon search-icon" />
+      <img src="/static/icons/devhops-full.png" alt="icon" class="icon search-icon" />
     </div>
   </section>
 
   <div class="h-grid py-5 bg-light">
     <div class="container">
-      <div class="row h-row">
+      <hr>
+      <!-- <div class="row h-row">
         <img src="/static/icons/Hipster_HotProducts.svg" alt="icon" class="icon search-icon" />
-      </div>
+      </div> -->
       <div class="row">
         {{ range $.products }}
         <div class="col-md-4">
